--- a/TaskBot.cabal
+++ b/TaskBot.cabal
@@ -1,18 +1,17 @@
 name:                TaskBot
 version:             0.1.0.0
-synopsis:            Initial project template from stack
+synopsis:            Task bot for Telegram
 description:         Please see README.md
-homepage:            https://github.com/githubuser/SuzianBot#readme
+homepage:            https://github.com/MCL1303/TaskBot
 license:             BSD3
 license-file:        LICENSE
-author:              Kirdon
+author:              Kemphag
 maintainer:          kemphack@mail.ru
-copyright:           2016 Kirdon
+copyright:           2016 Kemphag
 category:            Web
 build-type:          Simple
 -- extra-source-files:
 cabal-version:       >=1.10		
-
 
 executable TaskBot-exe
   hs-source-dirs:      app
