--- a/TaskBot.cabal
+++ b/TaskBot.cabal
@@ -17,9 +17,9 @@ executable TaskBot-exe
   hs-source-dirs:      app
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  build-depends:       base, HTTP, http-types, http-client-tls, http-client, bytestring
+  build-depends:       base, HTTP, http-types, http-client-tls, http-client, bytestring, aeson, template-haskell
   default-language:    Haskell2010
-  other-modules:       TelegramApi
+  other-modules:       TelegramApi, Tools
 
 test-suite TaskBot-test	
   type:                exitcode-stdio-1.0
