--- a/TaskBot.cabal
+++ b/TaskBot.cabal
@@ -17,7 +17,14 @@ executable TaskBot-exe
   hs-source-dirs:      app
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  build-depends:       base, HTTP, http-types, http-client-tls, http-client, bytestring, aeson, template-haskell
+  build-depends:       aeson
+                     , base
+                     , bytestring
+                     , HTTP
+                     , http-client
+                     , http-client-tls
+                     , http-types
+                     , template-haskell
   default-language:    Haskell2010
   other-modules:       TelegramApi, Tools
 
