--- a/TaskBot.cabal
+++ b/TaskBot.cabal
@@ -17,7 +17,14 @@ executable TaskBot-exe
   hs-source-dirs:      app
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  build-depends:       base, HTTP, http-types, http-client-tls, http-client, bytestring, text, http-conduit
+  build-depends:       base
+                      , HTTP
+                      , http-types
+                      , http-client-tls
+                      , http-client
+                      , bytestring
+                      , text
+                      , http-conduit
   default-language:    Haskell2010
   other-modules:       TelegramApi
 
@@ -30,5 +37,5 @@ test-suite TaskBot-test
   default-language:    Haskell2010
 
 source-repository head
-  type:     git
+  type:     github
   location: https://github.com/MCL1303/TaskBot
