--- a/TaskBot.cabal
+++ b/TaskBot.cabal
@@ -19,12 +19,12 @@ executable TaskBot-exe
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                       , HTTP
-                      , http-types
-                      , http-client-tls
-                      , http-client
                       , bytestring
-                      , text
+                      , http-client
+                      , http-client-tls
                       , http-conduit
+                      , http-types
+                      , text
   default-language:    Haskell2010
   other-modules:       TelegramApi
 
@@ -37,5 +37,5 @@ test-suite TaskBot-test
   default-language:    Haskell2010
 
 source-repository head
-  type:     github
+  type:     git
   location: https://github.com/MCL1303/TaskBot
