--- a/TaskBot.cabal
+++ b/TaskBot.cabal
@@ -17,11 +17,18 @@ executable TaskBot-exe
   hs-source-dirs:      app
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  build-depends:       base, HTTP, http-types, http-client-tls, http-client, bytestring
+  build-depends:       base
+                      , bytestring
+                      , HTTP
+                      , http-client
+                      , http-client-tls
+                      , http-conduit
+                      , http-types
+                      , text
   default-language:    Haskell2010
   other-modules:       TelegramApi
 
-test-suite TaskBot-test	
+test-suite TaskBot-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
