--- a/TaskBot.cabal
+++ b/TaskBot.cabal
@@ -20,6 +20,7 @@ executable TaskBot-exe
   build-depends:       aeson
                      , base
                      , bytestring
+                     , classy-prelude
                      , HTTP
                      , http-client
                      , http-client-tls
