--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ matrix:
     - compiler: hlint build and test
       install:
         # Build dependencies
-        - $stack build --test --only-dependencies
+        - $stack build hlint --test --only-dependencies
       script:
         # Build the package, its tests, and its docs and run the tests
         - $stack test --pedantic --haddock --no-haddock-deps
