--- a/TaskBot.cabal
+++ b/TaskBot.cabal
@@ -37,7 +37,7 @@ executable TaskBot-exe
                      , template-haskell
                      , text
   default-language:    Haskell2010
-  other-modules:       DB, Tools
+  other-modules:       BotCommands, DB, Tools
 
 test-suite TaskBot-test
   type:                exitcode-stdio-1.0
@@ -48,5 +48,5 @@ test-suite TaskBot-test
   default-language:    Haskell2010
 
 source-repository head
-  type:     git
+  type:     github
   location: https://github.com/MCL1303/TaskBot
