--- a/TaskBot.cabal
+++ b/TaskBot.cabal
@@ -48,5 +48,5 @@ test-suite TaskBot-test
   default-language:    Haskell2010
 
 source-repository head
-  type:     github
+  type:     git
   location: https://github.com/MCL1303/TaskBot
