--- a/.stylish-haskell.yaml
+++ b/.stylish-haskell.yaml
@@ -4,3 +4,5 @@ steps:
   - language_pragmas:
       align: false
   - trailing_whitespace: {}
+language_extensions:
+  - MultiParamTypeClasses  # workaround
