--- a/TaskBot.cabal
+++ b/TaskBot.cabal
@@ -13,10 +13,34 @@ build-type:          Simple
 -- extra-source-files:
 cabal-version:       >=1.10
 
+library
+  hs-source-dirs:   lib
+  exposed-modules:  Const
+                    Handlers
+                    Tools
+  other-modules:    Database.Persist.Extra
+                    BotCommands
+                    DB
+  default-language: Haskell2010
+  build-depends:    base
+                  , http-client
+                  , monad-control
+                  , monad-logger
+                  , mtl
+                  , persistent
+                  , persistent-sqlite
+                  , persistent-template
+                  , resourcet
+                  , safe
+                  , telegram-api
+                  , text
+
 executable TaskBot-exe
   hs-source-dirs:      app
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  default-language:    Haskell2010
+
   build-depends:       aeson
                      , base
                      , bytestring
@@ -36,16 +60,21 @@ executable TaskBot-exe
                      , telegram-api
                      , template-haskell
                      , text
-  default-language:    Haskell2010
-  other-modules:       BotCommands, Database.Persist.Extra, DB, Tools
+
+                     , TaskBot
 
 test-suite TaskBot-test
-  type:                exitcode-stdio-1.0
-  hs-source-dirs:      test
-  main-is:             Spec.hs
-  build-depends:       base, HTTP
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  default-language:    Haskell2010
+  type:               exitcode-stdio-1.0
+  hs-source-dirs:     test
+  main-is:            Spec.hs
+  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
+  default-language:   Haskell2010
+
+  build-depends:      base
+                    , tasty
+                    , tasty-hunit
+
+                    , TaskBot
 
 source-repository head
   type:     git
