--- a/TaskBot.cabal
+++ b/TaskBot.cabal
@@ -16,14 +16,18 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:   lib
   exposed-modules:  Bot
+                    Classes
                     Const
+                    DB
                     Tools
   other-modules:    BotCommands
                     Database.Persist.Extra
-                    DB
+                    Production
   default-language: Haskell2010
   build-depends:    base
+                  , errors
                   , http-client
+                  , http-client-tls
                   , monad-control
                   , monad-logger
                   , mtl
@@ -32,6 +36,7 @@ library
                   , persistent-template
                   , resourcet
                   , safe
+                  , servant-client
                   , telegram-api
                   , text
 
@@ -67,12 +72,18 @@ test-suite test
   type:               exitcode-stdio-1.0
   hs-source-dirs:     test
   main-is:            Spec.hs
+  other-modules:      Testing
   ghc-options:        -threaded -rtsopts -with-rtsopts=-N
   default-language:   Haskell2010
 
-  build-depends:      base
+  build-depends:      aeson
+                    , base
+                    , mtl
+                    , pseudomacros
                     , tasty
                     , tasty-hunit
+                    , telegram-api
+                    , text
 
                     , TaskBot
 
