--- a/.stylish-haskell.yaml
+++ b/.stylish-haskell.yaml
@@ -1,6 +1,7 @@
 steps:
   - imports:
       align: group
+      pad_module_names: false
   - language_pragmas:
       align: false
   - trailing_whitespace: {}
