--- a/TaskBot.cabal
+++ b/TaskBot.cabal
@@ -16,10 +16,10 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:   lib
   exposed-modules:  Bot
+                    BotCommands
                     Const
                     Tools
-  other-modules:    BotCommands
-                    Database.Persist.Extra
+  other-modules:    Database.Persist.Extra
                     DB
   default-language: Haskell2010
   build-depends:    base
